--- a/examguruji.css
+++ b/examguruji.css
@@ -7,9 +7,7 @@ html{
     font-size: 62.5%;
     /* 1rem = 10px */
 }
-main img{
-    width: 15rem;
-}
+
 header{
     background-color: rgb(231, 55, 55);
     display: flex;
@@ -98,6 +96,10 @@ section h2 a:hover{
     font-weight: bolder;
     top: 30rem;
     left: 11rem ;
+    color:black;
+}
+.kvs a:hover{
+    color: blue;
 }
 .army img{
     width: 20rem;
@@ -112,6 +114,10 @@ section h2 a:hover{
     font-weight: bolder;
     top: 30rem;
     left: 46.5rem ;
+    color:black;
+}
+.army a:hover{
+    color: blue;
 }
 .evs img{
     width: 20rem;
@@ -125,7 +131,11 @@ section h2 a:hover{
     font-weight: bolder;
     top: 30rem;
     left: 76.1rem ;
+    color:black;
 
+}
+.evs a:hover{
+    color: blue;
 }
 .mpgk img{
     width: 20rem;
@@ -139,6 +149,10 @@ section h2 a:hover{
     font-weight: bolder;
     top: 30rem;
     left: 117rem ;
+    color:black;
+}
+.mpgk a:hover{
+    color: blue;
 }
 .uptet img{
     width: 20rem;
@@ -153,6 +167,10 @@ section h2 a:hover{
     font-weight: bolder;
     top: 60rem;
     left: 31.2rem ;
+    color:black;
+}
+.uptet a:hover{
+    color: blue;
 }
 .cd img{
     width: 20rem;
@@ -166,10 +184,133 @@ section h2 a:hover{
     font-weight: bolder;
     top: 60rem;
     left: 91.7rem ;
+    color:black;
     
 }
-.kvs a ,.mpgk a ,.uptet a ,.evs a ,.cd a ,.army a:hover{
-    color: rgb(0, 17, 255);
+.cd a:hover{
+    color: blue;
+}
+main{
+    position: relative;
+    border: .4rem solid black;
+    border-radius: .6rem;
+    margin: .2rem;
+    height: 35rem;
+    background: url(https://source.unsplash.com/collection/190727/1600x900);
+}
+main h4{
+    background-color: rgb(46, 45, 44);
+    color: white;
+    border: .4rem solid black;
+    border-radius: .4rem;
+    text-align: center;
+    font-size: xx-large;
+    margin: .4rem;
+}
+main img{
+    position: absolute;
+    
+    width: 16rem;
+    left: 44%;
+    top: 20%;
+    
+    border: .4rem solid black;
+    border-radius: .5rem;
+
+}
+main h2{
+    position: absolute;
+    left: 41.5%;
+    top: 80%;
+    font-size: large;
+}
+.fb a{
+    position: absolute;
+    left: 38%;
+    top: 88%;
+    font-size: large;
+    font-weight: bolder;
+    color: blue;
+}
+.insta a{
+    position: absolute;
+    left: 46%;
+    top: 88%;
+    font-size: large;
+    font-weight: bolder;
+    color: blue;
+}
+.twitter a{
+    position: absolute;
+    left: 55%;
+    top: 88%;
+    font-size: large;
+    font-weight: bolder;
+    color: blue;
+}
+main a:hover{
+    background-color: black;
+    color: red;
+    
+}
+footer{
+    background-color: rgb(43, 43, 42);
+    margin: .5rem;
+    padding: .8rem;
+    font-size: 2.2rem;
+    border: .4rem solid black;
+    border-radius: .4rem;
+    width: auto;
+    
+}
+footer a{
+    color: white;
+    margin: .8rem;
+    padding: .5rem;
+}
+footer a:hover{
+    color: red;
+
+}
+.animation{
+    clip-path: circle(22.5% at 100% 0);
+    display:inline-block;
+    background-color: rgb(45, 231, 238);
+    margin: 1.5rem;
+    font-size: x-large;
+    padding: 1.5rem;
+    border-radius: .4rem;
+    position:absolute;
+    right: -1.34%;
+    top: -3%;
+    transition: all 1s ;
+   
+
+}
+.animation a{
+    color: red;
+    font-weight: bolder;
+}
+.animation a:hover{
+    color: blue;
+}
+.animation:hover{
+    clip-path: circle(141.4% at 100% 0);
+
+}
+@media (max-width:1400px){
+    html{
+        font-size: 55%;
+    }
+    header p{
+        position: absolute;
+        right: 10rem;
+        top: 1.5rem;
+    }
+    main{
+        font-size: 50%;
+    }
+    
 }
 
 
@@ -192,18 +333,28 @@ section h2 a:hover{
         position: absolute;
         left: 66.6rem;
     }
+    
+    main h2{
+        position: absolute;
+        left: 41%;
+        top: 81.4%;
+    }
+   .insta a{
+       position: absolute;
+       left: 48%;
+       top: 88%;
+   }
+   .twitter a{
+    position: absolute;
+    left: 58%;
+    top: 88%;
+}
+    main h4{
+        font-size: 600%;
+    }
 
 }
-@media (max-width:1400px){
-    html{
-        font-size: 60%;
-    }
-    header p{
-        position: absolute;
-        right: 10rem;
-        top: 1.5rem;
-    }
-}
+
 @media (max-width:1100px){
     html{
         font-size: 55%;
@@ -223,6 +374,12 @@ section h2 a:hover{
         right: 8rem;
         top: 2rem;
     }
+    main h2{
+        position: absolute;
+        left: 40%;
+        top: 80%;
+        font-size: large;
+    }
 }
 @media (max-width:860px){
     html{
@@ -232,6 +389,27 @@ section h2 a:hover{
         position: absolute;
         right: 9rem;
         top: 1.5rem;
+    }
+    main h2{
+        position: absolute;
+        left: 38%;
+        top: 80%;
+        font-size: large;
+    }
+    .insta a{
+        position: absolute;
+        left: 48%;
+        top: 88%;
+    }
+    .twitter a{
+        position: absolute;
+        left: 60%;
+        top: 88%;
+    }
+    .fb a{
+        position: absolute;
+        left: 36%;
+        top: 88%;
     }
 }
 @media (max-width:700px){
@@ -243,6 +421,29 @@ section h2 a:hover{
         right: 8rem;
         top: 1.5rem;
     }
+    .insta a{
+        position: absolute;
+        left: 46.8%;
+        top: 89%;
+    }
+    .twitter a{
+        position: absolute;
+        left: 64%;
+        top: 89%;
+    }
+    .fb a{
+        position: absolute;
+        left: 30%;
+        top: 89%;
+    }
+
+    main h2{
+        position: absolute;
+        left: 34%;
+        top: 80%;
+        
+    }
+}
     @media (max-width:580px){
         html{
             font-size: 30%;
@@ -251,15 +452,64 @@ section h2 a:hover{
             position: absolute;
             right: 7rem;
         }
+        main img{
+            width: 20%;
+            position: absolute;
+            left: 40.5%;
+            top: 12%;
+        }
+        .insta a{
+            position: absolute;
+            left: 48%;
+            top: 90%;
+        }
+        .twitter a{
+            position: absolute;
+            left: 70%;
+            top: 90%;
+        }
+        .fb a{
+            position: absolute;
+            left: 28%;
+            top: 90%;
+        }
+
+    main {
+        height: 44rem;
+    }
+    main h2{
+        position: absolute;
+        left: 33%;
+        top: 80%;
+        font-size: large;
+    }
+    footer a{
+        font-size: 120%;
     }
 }
 @media (max-width:500px){
     html{
         font-size: 25%;
     }
+    main h2{
+        position: absolute;
+        left: 30%;
+        top: 80%;
+        font-size: large;
+    }
+   main img{
+       width: 22rem;
+   }
+   footer a{
+    font-size: 130%;
+}
+}
     @media (max-width:425px){
         html{
             font-size: 55%;
+        }
+        .animation{
+            display: none;
         }
         header p{
             display: none;
@@ -325,6 +575,34 @@ section h2 a:hover{
         .mpgk a, .uptet a, .cd a{
             display: none;
         }
+        main img{
+            position: absolute;
+            left: 26%;
+        }
+        main h2{
+            position: absolute;
+            left: 22%;
+            top: 79%;
+            font-size: large;
+        }
+        .fb{
+            position: absolute;
+            left: 10%;
+            top: 87%;
+        }
+        .insta{
+            position: absolute;
+            left: 40%;
+            top: 87%;
+        }
+        .twitter{
+            position: absolute;
+            left: 70%;
+            top: 87%;
+        }
+        footer a{
+            font-size: 80%;
+        }
         
     
     }
@@ -336,17 +614,35 @@ section h2 a:hover{
           font-size: 2.5rem;
           color: blue;
         }
+        main h2{
+            position: absolute;
+            left: 22%;
+            top: 80%;
+            font-size: large;
+        }
         
     }
     @media (max-width:365px) { 
         html{
             font-size: 50%;
         }
+        main h2{
+            position: absolute;
+            left: 20%;
+            top: 80%;
+            font-size: large;
+        }
         
     }
     @media (max-width:350px) { 
         html{
             font-size: 42%;
+        }
+        main h2{
+            position: absolute;
+            left: 17%;
+            top: 80%;
+            font-size: large;
         }
         
     }
@@ -365,6 +661,12 @@ section h2 a:hover{
             font-size: 45%;
             margin: 0;
         }
+        main h2{
+            position: absolute;
+            left: 24%;
+            top: 80%;
+            font-size: small;
+        }
     }
     @media (max-width:300px){
         html{
@@ -372,6 +674,18 @@ section h2 a:hover{
         }
         nav a{
             padding: 1rem;
+        }
+        main h2{
+            position: absolute;
+            left: 22%;
+            top: 80%;
+            font-size: small;
+        }
+      
+        .twitter{
+            position: absolute;
+            left: 74%;
+
         }
 }
 
@@ -400,6 +714,7 @@ section h2 a:hover{
         html{
             font-size: 30%;
         }
+        
         
     
     @media (max-width:200px){
